--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "9.19.0",
     "@parcel/transformer-sass": "2.13.3",
     "@types/express": "5.0.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "eslint": "9.19.0",
+    "eslint-plugin-react": "7.37.4",
+    "globals": "15.14.0",
     "parcel": "2.13.3",
     "process": "^0.11.10",
     "tsx": "4.19.2",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.22.0"
   }
 }
