--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "client": "parcel client/index.html",
-    "server": "tsx server/index.ts"
+    "server": "tsx server/index.ts",
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "clsx": "2.1.1",
@@ -18,16 +21,26 @@
   "devDependencies": {
     "@eslint/js": "9.19.0",
     "@parcel/transformer-sass": "2.13.3",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.2.0",
     "@types/express": "5.0.0",
+    "@types/jest": "29.5.14",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "9.19.0",
     "eslint-plugin-react": "7.37.4",
     "globals": "15.14.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "parcel": "2.13.3",
     "process": "^0.11.10",
+    "ts-jest": "29.2.5",
     "tsx": "4.19.2",
     "typescript": "5.7.3",
     "typescript-eslint": "8.22.0"
+  },
+  "alias": {
+    "src": "/client/src/"
   }
 }
