--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "clsx": "2.1.1",
     "cors": "2.8.5",
+    "dotenv": "16.4.7",
     "express": "4.21.2",
     "react": "19.0.0",
     "react-animate-height": "3.2.3",
@@ -27,18 +28,27 @@
     "@types/jest": "29.5.14",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "buffer": "6.0.3",
+    "crypto-browserify": "3.12.1",
     "eslint": "9.19.0",
     "eslint-plugin-react": "7.37.4",
+    "events": "3.3.0",
     "globals": "15.14.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "jest-transformer-svg": "2.1.0",
+    "os-browserify": "0.3.0",
     "parcel": "2.13.3",
+    "path-browserify": "1.0.1",
     "process": "^0.11.10",
+    "stream-browserify": "3.0.0",
+    "string_decoder": "1.3.0",
     "ts-jest": "29.2.5",
     "tsx": "4.19.2",
     "typescript": "5.7.3",
-    "typescript-eslint": "8.22.0"
+    "typescript-eslint": "8.22.0",
+    "vm-browserify": "1.1.2"
   },
   "alias": {
     "src": "/client/src/"
